--- a/index.css
+++ b/index.css
@@ -3,12 +3,12 @@
     height: 50px;
     border: 2px solid;
     border-radius: 5px;
-    background-color: whitesmoke;
+    background-color:white;
     display: flex;
 }
 .style1{
     width: 25%;
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -21,13 +21,13 @@ Input{
 }
 #socialDiv{
     width: 50%;
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
 .socialImg{
-    width: 40px; height: 40px;
+    width: 40px; height: 40px; border-radius: 15px;
 }
 #profileImg{
     width: 40px; height: 40px; border-radius: 40px
@@ -83,8 +83,8 @@ Input{
     flex-direction: column;
     border: 2px solid;
     border-radius: 10px;
-    background-color: rgb(239, 239, 239);
-    margin-top: 5%;}
+    margin-top: 5%;
+}
     #commentBoxDiv2{
         width: 90%;
         margin-top: 4%;
@@ -161,7 +161,7 @@ Input{
     height: 50px;
     border: solid 2px;
     border-radius: 5px;
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
