--- a/index.css
+++ b/index.css
@@ -1,14 +1,15 @@
 #navBar{
     width: 100%;
-    height: 50px;
+    height: 70px;
     border: 2px solid;
     border-radius: 5px;
-    background-color:white;
+    background-color:#f0f2f5;
     display: flex;
+    border-color:#3b5998;
 }
 .style1{
     width: 25%;
-    background-color: white;
+    background-color:#dfe1ee;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -17,11 +18,12 @@
     width: 40px; height: 40px; border-radius: 25px;
 }
 Input{
-    border-radius: 10px;
+    border-radius: 15px;
+    border:none;
 }
 #socialDiv{
     width: 50%;
-    background-color: white;
+    background-color: #dfe1ee;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -41,9 +43,10 @@ Input{
 }
 #links{
     width: 20%;
-    background-color: whitesmoke;
+    background-color: #dfe1ee;
     border: solid 2px;
     border-radius: 5px;
+    border-color: #3b5998;
     display: flex;
     flex-direction: column;
     padding-bottom: 4%;
@@ -66,9 +69,10 @@ Input{
 
 }
 #posts{  width: 58%;
-    background-color: whitesmoke;
+    background-color: #dfe1ee;
     border: solid 2px;
     border-radius: 5px;
+    border-color: #3b5998;
     display: flex;
     flex-direction: column;}
 #postDiv{
@@ -83,6 +87,7 @@ Input{
     flex-direction: column;
     border: 2px solid;
     border-radius: 10px;
+    border-color: #2b3c63;
     margin-top: 5%;
 }
     #commentBoxDiv2{
@@ -92,6 +97,7 @@ Input{
         flex-direction: column;
         align-self: center;
         border-radius: 15px;
+        border-color: #232e4a;
     }
     #commentBoxDiv3{
         display: flex; margin-top: 1%; margin-bottom: 1%;
@@ -112,7 +118,7 @@ Input{
     }
     #commentBoxLine{
         width: 70%;
-        border: 1px black solid;
+        border: 1px #3b5998 solid;
         align-self: center;
         margin-top: 10px;
         margin-bottom: 10px;
@@ -134,9 +140,10 @@ Input{
     #friendListDiv{
         width: 20%;
         height: 100;
-        background-color: whitesmoke;
+        background-color: #dfe1ee;
         border: solid 2px;
         border-radius: 5px;
+        border-color: #3b5998;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -161,7 +168,8 @@ Input{
     height: 50px;
     border: solid 2px;
     border-radius: 5px;
-    background-color: white;
+    border-color: #3b5998;
+    background-color: #dfe1ee;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
