--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 #navBar{
     width: 100%;
     height: 70px;
-    border: 2px solid;
+    /* border: 2px solid; */
     border-radius: 5px;
-    background-color:#f0f2f5;
+    /* background-color:snow; */
     display: flex;
     border-color:#3b5998;
 }
 .style1{
     width: 25%;
-    background-color:#dfe1ee;
+    background-color:snow;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -20,10 +20,11 @@
 Input{
     border-radius: 15px;
     border:none;
+    background-color: #f0f2f5;
 }
 #socialDiv{
     width: 50%;
-    background-color: #dfe1ee;
+    background-color: snow;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -43,10 +44,10 @@ Input{
 }
 #links{
     width: 20%;
-    background-color: #dfe1ee;
-    border: solid 2px;
+    background-color: #f0f2f5;
+    /* border: solid 2px; */
     border-radius: 5px;
-    border-color: #3b5998;
+    /* border-color: #3b5998; */
     display: flex;
     flex-direction: column;
     padding-bottom: 4%;
@@ -69,10 +70,10 @@ Input{
 
 }
 #posts{  width: 58%;
-    background-color: #dfe1ee;
-    border: solid 2px;
+    background-color: #f0f2f5;
+    /* border: solid 2px; */
     border-radius: 5px;
-    border-color: #3b5998;
+    /* border-color: #3b5998; */
     display: flex;
     flex-direction: column;}
 #postDiv{
@@ -85,9 +86,10 @@ Input{
     width: 80%;
     display: flex;
     flex-direction: column;
-    border: 2px solid;
+    /* border: 2px solid; */
     border-radius: 10px;
-    border-color: #2b3c63;
+    /* border-color: #2b3c63; */
+    background-color: snow;
     margin-top: 5%;
 }
     #commentBoxDiv2{
@@ -97,7 +99,8 @@ Input{
         flex-direction: column;
         align-self: center;
         border-radius: 15px;
-        border-color: #232e4a;
+        /* border-color: #232e4a; */
+      
     }
     #commentBoxDiv3{
         display: flex; margin-top: 1%; margin-bottom: 1%;
@@ -115,10 +118,11 @@ Input{
         border-radius: 30px;
         margin-top: 1%;
         margin-bottom: 1%;
+        background-color:#f0f2f5;
     }
     #commentBoxLine{
         width: 70%;
-        border: 1px #3b5998 solid;
+        border: 1px gray solid;
         align-self: center;
         margin-top: 10px;
         margin-bottom: 10px;
@@ -140,10 +144,10 @@ Input{
     #friendListDiv{
         width: 20%;
         height: 100;
-        background-color: #dfe1ee;
-        border: solid 2px;
+        background-color: #f0f2f5;
+        /* border: solid 2px; */
         border-radius: 5px;
-        border-color: #3b5998;
+        /* border-color: #3b5998; */
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -165,11 +169,11 @@ Input{
 }
 #footer{
     width: 100%;
-    height: 50px;
-    border: solid 2px;
+    height: 70px;
+    /* border: solid 2px; */
     border-radius: 5px;
-    border-color: #3b5998;
-    background-color: #dfe1ee;
+    /* border-color: #3b5998; */
+    background-color: #f0f2f5;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
